--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,17 +1,17 @@
 AM_CPPFLAGS = @VMOD_INCLUDES@ -Wall -Werror
 
 vmoddir = @VMOD_DIR@
-vmod_LTLIBRARIES = libvmod_example.la
+vmod_LTLIBRARIES = libvmod_fsbackend.la
 
-libvmod_example_la_LDFLAGS = -module -export-dynamic -avoid-version -shared
+libvmod_fsbackend_la_LDFLAGS = -module -export-dynamic -avoid-version -shared
 
-libvmod_example_la_SOURCES = \
+libvmod_fsbackend_la_SOURCES = \
 	vcc_if.c \
 	vcc_if.h \
-	vmod_example.c
+	vmod_fsbackend.c
 
-vcc_if.c vcc_if.h: @VMODTOOL@ $(top_srcdir)/src/vmod_example.vcc
-	@VMODTOOL@ $(top_srcdir)/src/vmod_example.vcc
+vcc_if.c vcc_if.h: @VMODTOOL@ $(top_srcdir)/src/vmod_fsbackend.vcc
+	@VMODTOOL@ $(top_srcdir)/src/vmod_fsbackend.vcc
 
 VMOD_TESTS = $(top_srcdir)/src/tests/*.vtc
 .PHONY: $(VMOD_TESTS)
@@ -22,7 +22,7 @@ $(top_srcdir)/src/tests/*.vtc:
 check: $(VMOD_TESTS)
 
 EXTRA_DIST = \
-	vmod_example.vcc \
+	vmod_fsbackend.vcc \
 	$(VMOD_TESTS)
 
 CLEANFILES = $(builddir)/vcc_if.c $(builddir)/vcc_if.h
