--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: libvmod-example
+Source: libvmod-fsbackend
 Section: web
 Priority: extra
 Maintainer: Varnish Software <support@varnish-software.com>
@@ -6,12 +6,12 @@ Build-Depends: debhelper (>= 7),
  build-essential,
  pkg-config,
  python-docutils,
- varnish (>= 4.0.2),
- libvarnishapi-dev (>= 4.0.2)
+ varnish (>= 4.1.0),
+ libvarnishapi-dev (>= 4.1.0)
 Standards-Version: 3.8.1
-Vcs-Git: git://github.com/varnish/libvmod-example.git
+Vcs-Git: git://github.com/mbgrydeland/libvmod-fsbackend.git
 
-Package: libvmod-example
+Package: libvmod-fsbackend
 Architecture: any
-Depends: varnish (>= 4.0.2), ${shlibs:Depends}, ${misc:Depends}, ${Varnish:ABI}
-Description: Example vmod for Varnish
+Depends: varnish (>= 4.1.0), ${shlibs:Depends}, ${misc:Depends}, ${Varnish:ABI}
+Description: File system backend vmod for Varnish
